--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <!-- Strings related to fragment -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_product">Product info</string>
 
     <!-- Strings related to Settings -->
 
