--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,37 +5,50 @@
     <string name="nav_products">Products</string>
     <string name="nav_profile">Profile</string>
     <string name="nav_settings">Settings</string>
+    <string name="nav_barcode">Barcode</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <!-- Strings related to fragment -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_product">Product info</string>
     <string name="title_activity_profile">Profile info</string>
-    <string name="title_activity_orders">Orders</string>
+    <string name="title_activity_orders">My orders</string>
+    <string name="title_activity_barcode">Barcode</string>
+
+    <!-- Strings related to barcode -->
+
+    <!-- General product -->
+    <string name="barcode_btn_update_quantity">Update quantity</string>
+    <string name="barcode_btn_scan_barcode">Scan barcode</string>
+    <string name="barcode_product_quantity">Product quantity</string>
+
+    <!-- Strings related to product -->
+
+    <!-- product -->
+    <string name="product_title_title">Product title</string>
+    <string name="product_title_price">Price :</string>
+    <string name="product_title_quantity">Quantity :</string>
+    <string name="product_title_reference">Reference :</string>
+    <string name="product_title_description">Description :</string>
 
     <!-- Strings related to Settings -->
 
     <!-- General settings -->
     <string name="pref_header_general">General</string>
-
     <string name="pref_title_night_mode">Night mode</string>
     <string name="pref_title_language">Change system language</string>
 
     <!-- Advance settings-->
     <string name="pref_header_advance">Advance</string>
-
     <string name="pref_title_api_server_host">API server host</string>
     <string name="pref_default_api_server_host">http://api.ppe.net</string>
-
     <string name="pref_title_img_server_host">Image server host</string>
     <string name="pref_default_img_server_host">http://ppe.net/img/</string>
 
     <!-- Other settings-->
     <string name="pref_header_order">Other</string>
-
     <string name="pref_title_sys_night_mode">Allow system night mode</string>
     <string name="pref_title_dev_settings">Dev settings</string>
 
