--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,9 +51,9 @@
     <!-- Advance settings-->
     <string name="pref_header_advance">Advance</string>
     <string name="pref_title_api_server_host">API server host</string>
-    <string name="pref_default_api_server_host">http://api.ppe.net</string>
+    <string name="pref_default_api_server_host">https://api.ppe3.magicorp.fr</string>
     <string name="pref_title_img_server_host">Image server host</string>
-    <string name="pref_default_img_server_host">http://ppe.net/img/</string>
+    <string name="pref_default_img_server_host">https://ppe3.magicorp.fr/img</string>
 
     <!-- Other settings-->
     <string name="pref_header_order">Other</string>
