--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,22 +5,22 @@
     <string name="nav_products">Products</string>
     <string name="nav_profile">Profile</string>
     <string name="nav_settings">Settings</string>
-    <string name="nav_barcode">Barcode</string>
+    <string name="nav_barcode">Bar code</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <!-- Strings related to fragment -->
     <string name="title_activity_settings">Settings</string>
-    <string name="title_activity_product">Product info</string>
+    <string name="title_activity_product">Product details</string>
     <string name="title_activity_profile">Profile info</string>
     <string name="title_activity_orders">My orders</string>
     <string name="title_activity_barcode">Barcode</string>
 
     <!-- errors and message -->
     <string name="error_server">Communication error with the server</string>
-    <string name="error_network_connexion">Error with network connexion</string>
-    <string name="error_bad_authentication">Your login don\'t exist</string>
+    <string name="error_network_connexion">Network connection error</string>
+    <string name="error_bad_authentication">Your login does not exist</string>
     <string name="msg_quantity_success">Product quantity update with success</string>
 
     <!-- Strings related to barcode -->
@@ -29,7 +29,7 @@
     <string name="barcode_btn_update_quantity">Update quantity</string>
     <string name="barcode_btn_scan_barcode">Scan barcode</string>
     <string name="barcode_product_quantity">Product quantity</string>
-    <string name="barcode_product_scan_barcode">Scan product barcode</string>
+    <string name="barcode_product_scan_barcode">"Scan the product barcode "</string>
 
     <!-- Strings related to product -->
 
@@ -39,7 +39,7 @@
     <string name="product_title_quantity">Quantity :</string>
     <string name="product_title_reference">Reference :</string>
     <string name="product_title_description">Description :</string>
-    <string name="product_default_image">product image</string>
+    <string name="product_default_image">Product image</string>
 
     <!-- Strings related to Settings -->
 
@@ -52,7 +52,7 @@
     <string name="pref_header_advance">Advance</string>
     <string name="pref_title_api_server_host">API server host</string>
     <string name="pref_default_api_server_host">https://api.ppe3.magicorp.fr</string>
-    <string name="pref_title_img_server_host">Image server host</string>
+    <string name="pref_title_img_server_host">Host of Image server</string>
     <string name="pref_default_img_server_host">https://ppe3.magicorp.fr/img</string>
 
     <!-- Other settings-->
@@ -74,7 +74,7 @@
 
     <!-- For table addresses -->
     <string name="address_header_way">Way</string>
-    <string name="address_header_complement">Complement</string>
+    <string name="address_header_complement">"Address supplement "</string>
     <string name="address_header_postal_code">Postal code</string>
     <string name="address_header_postal_city">City</string>
 
