--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="pref_default_img_server_host">https://ppe3.magicorp.fr/img</string>
 
     <!-- Other settings-->
-    <string name="pref_header_order">Other</string>
+    <string name="pref_header_other">Other</string>
     <string name="pref_title_sys_night_mode">Allow system night mode</string>
     <string name="pref_title_dev_settings">Dev settings</string>
 
