debug net fond product on scan barcode

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -61,4 +61,5 @@
     <string name="address_header_complement">Complément d\'adresse</string>
     <string name="barcode_result_not_found">Résultats manquants</string>
     <string name="order_not_found">Aucune commandes trouver</string>
+    <string name="barcode_not_found">Aucun produit ne correspond à ce code-barre</string>
 </resources>
