--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -62,4 +62,6 @@
     <string name="barcode_result_not_found">Résultats manquants</string>
     <string name="order_not_found">Aucune commandes trouver</string>
     <string name="barcode_not_found">Aucun produit ne correspond à ce code-barre</string>
+    <string name="title_activity_stats">stats</string>
+    <string name="stats">stats</string>
 </resources>
